# act

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/act-check/: Cargo.toml
crates/act-check/src/: lib.rs
crates/act-check/tests/: checker_tests.rs
crates/act-diagnostics/: Cargo.toml
crates/act-diagnostics/src/: lib.rs
crates/act-fmt/: Cargo.toml
crates/act-fmt/src/: lib.rs
crates/act-fmt/tests/: fmt_tests.rs
crates/act-ir/: Cargo.toml
crates/act-ir/src/: lib.rs
crates/act-parser/: Cargo.toml
crates/act-parser/src/: lib.rs  parser.rs
crates/act-parser/tests/: parser_tests.rs
crates/act-run/: Cargo.toml
crates/act-run/src/: budget.rs  builtin.rs  host.rs  interp.rs  lib.rs  registry.rs  schema.rs  value.rs
crates/act-run/src/builtin/: std.act  verify.act
crates/act-run/src/host_impl/: http.rs  mock.rs  mod.rs
crates/act-run/tests/: run_tests.rs  schema_tests.rs  wire_tests.rs
crates/act-syntax/: Cargo.toml
crates/act-syntax/src/: ast.rs  lexer.rs  lib.rs
crates/actc/: Cargo.toml
crates/actc/src/: main.rs
docs/: tutorial.md
examples/: check.act  eval.act  fix_regression.act  open_pr.act  self_evolve.act  smoke.act  summarize.act
