[package]
name = "act-check"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
act-syntax.workspace = true
act-diagnostics.workspace = true

[dev-dependencies]
act-parser.workspace = true
act-ir.workspace = true
