[package]
name = "act-run"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
act-syntax.workspace = true
act-parser.workspace = true
act-check.workspace = true
act-diagnostics.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[dev-dependencies]
act-fmt.workspace = true
